- fixed misbehaviour on tag-presets in the mapper - much better overflow-tratment on header-part mapping
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/templavoila_ng/branches/experimental@20397 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/templavoila/cm1/styles.css
+++ b/templavoila/cm1/styles.css
@@ -9,6 +9,11 @@ table.typo3-tvlist {
 	table-layout: fixed;
 }
 
+table#c-headerParts pre {
+	overflow-x: auto;
+	white-space: normal;
+}
+
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 dl.DS-infos dt,
 dl.TO-infos dt {
